--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "@next-auth/mongodb-adapter": "^1.0.4",
+    "mongodb": "^4.9.1",
+    "next": "^12.3.0",
+    "next-auth": "^4.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
