next:profilepage designe

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 GOOGLE_CLIENT_ID=485128806416-755pbr7o4gq857qvfg8betatl8ks7ccf.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_SECRET=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
 
-JWT_SECRET=ONq1ukRPSli8Ysfd3M+0N4bBobwucUTC57AFpeH74Rc=
+JWT_SECRET=4lyUlIrROfTjKkcd+TdGjZoeHyGaGONuiph38c4Zdg=
+
+NEXTAUTH_URL=http://localhost:3000
 
 MONGODB_URI=mongodb+srv://ossama:oussama.siham123@cluster0.okrrfov.mongodb.net/?retryWrites=true&w=majority
