--- a/.env
+++ b/.env
@@ -5,4 +5,8 @@ JWT_SECRET=4lyUlIrROfTjKkcd+TdGjZoeHyGaGONuiph38c4Zdg=
 
 NEXTAUTH_URL=http://localhost:3000
 
+
 MONGODB_URI=mongodb+srv://ossama:oussama.siham123@cluster0.okrrfov.mongodb.net/?retryWrites=true&w=majority
+
+FACEBOOK_CLIENT_ID=1166700987531121
+FACEBOOK_CLIENT_SECRET=8066e8f87d84cd376400c6fdbb1491f7
