--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongodb": "^4.9.1",
     "next": "^12.3.0",
     "next-auth": "^4.10.3",
+    "nodemailer": "^6.7.8",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
