--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.4",
+    "bcrypt": "^5.0.1",
     "mongodb": "^4.9.1",
+    "mongoose-bcrypt": "^1.10.0",
     "next": "^12.3.0",
     "next-auth": "^4.10.3",
     "nodemailer": "^6.7.8",
     "react": "18.1.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
