--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemailer": "^6.7.8",
     "react": "18.1.0",
     "react-avatar": "^5.0.3",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
