--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.1.0",
     "react-avatar": "^5.0.3",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "vercel": "^28.2.5"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
