--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-avatar": "^5.0.3",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
+    "recoil": "^0.7.5",
     "vercel": "^28.2.5"
   },
   "devDependencies": {
