--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ GOOGLE_CLIENT_SECRET=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
 
 JWT_SECRET=4lyUlIrROfTjKkcd+TdGjZoeHyGaGONuiph38c4Zdg=
 
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_URL2=https://https://instakoora.vercel.app/
+NEXTAUTH_URL2=http://localhost:3000
+NEXTAUTH_URL=https://https://instakoora.vercel.app/
 
 MONGODB_URI=mongodb+srv://ossama:oussama.siham123@cluster0.okrrfov.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB=Cluster0
