--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "recoil": "^0.7.5",
+    "swiper": "^8.4.3",
     "vercel": "^28.2.5"
   },
   "devDependencies": {
