--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.6",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/lab": "^5.0.0-alpha.104",
     "@next-auth/mongodb-adapter": "^1.0.4",
+    "axios": "^1.1.2",
     "bcrypt": "^5.0.1",
+    "leaflet": "^1.9.2",
+    "leaflet-geosearch": "^3.7.0",
+    "mapbox-gl": "^2.10.0",
     "mongodb": "^4.9.1",
     "mongoose-bcrypt": "^1.10.0",
     "next": "^12.3.0",
     "next-auth": "^4.10.3",
     "nodemailer": "^6.7.8",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-avatar": "^5.0.3",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.1.0",
     "recoil": "^0.7.5",
     "swiper": "^8.4.3",
     "vercel": "^28.2.5"
