--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.6",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/lab": "^5.0.0-alpha.104",
+    "@mui/material": "^5.10.10",
     "@next-auth/mongodb-adapter": "^1.0.4",
     "axios": "^1.1.2",
     "bcrypt": "^5.0.1",
@@ -27,6 +30,7 @@
     "react-leaflet": "^4.1.0",
     "recoil": "^0.7.5",
     "swiper": "^8.4.3",
+    "timeago-react": "^3.0.5",
     "vercel": "^28.2.5"
   },
   "devDependencies": {
