--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@googlemaps/js-api-loader": "^1.14.3",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/lab": "^5.0.0-alpha.104",
     "@mui/material": "^5.10.10",
     "@next-auth/mongodb-adapter": "^1.0.4",
+    "@react-google-maps/api": "^2.13.1",
     "axios": "^1.1.2",
     "bcrypt": "^5.0.1",
     "leaflet": "^1.9.2",
